# Qt_Sensor_App

./: .gitignore  CMakeLists.txt
src/: authmanager.cpp  authmanager.h  main.cpp  test.c
ui/: HomeScreen.qml  LoginScreen.qml  Main.qml
